--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <h1>Git desde cero</h1>
 
+    <form action="">
+        <label for="nombre">Tu nombre</label>
+        <input type="text" id="nombre">
+    </form>
+
     <script src="./js/app.js"></script>
-    
 </body>
 </html>
