se agrego un link al index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <input type="text" id="nombre">
     </form>
 
+    <a href="http://local"></a>
+
     <script src="./js/app.js"></script>
 </body>
 </html>
