Aprendiendo a mostrar las diferencias de las modificaciones

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <input type="text" id="nombre">
     </form>
 
-    <a href="http://local"></a>
+    <h2>Prueba de cambios</h2>
+
+    <div>
+        prueba para ver algunas cosas de git
+    </div>
 
     <script src="./js/app.js"></script>
 </body>
