--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         prueba para ver algunas cosas de git
     </div>
 
+    <div>
+        <h2>Avanzando en el tiempo en git</h2>
+    </div>
+
     <script src="./js/app.js"></script>
 </body>
 </html>
