Avanzando en la rama dev

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <h2>Avanzando en el tiempo en git</h2>
     </div>
 
+    <div>
+        <h2>Este es un nuevo cambio en la rama dev
+            
+        </h2>
+    </div>
+
     <script src="./js/app.js"></script>
 </body>
 </html>
