Cambios en la rama master para index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <h2>Avanzando en el tiempo en git</h2>
     </div>
 
+    <div>
+        <h3>Estoy en la rama master</h3>
+        <p>esta es una prueba</p>
+    </div>
+
     <script src="./js/app.js"></script>
 </body>
 </html>
